cluster/apps/networking/echo-test/echo-test.yaml
### * service1
apiVersion: v1
kind: Service
metadata:
  name: echo1
  namespace: networking
spec:
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: echo1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo1
  namespace: networking
spec:
  selector:
    matchLabels:
      app: echo1
  replicas: 2
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
        - name: echo1
          image: hashicorp/http-echo
          args:
            - "-text=echo1"
          ports:
            - containerPort: 5678
---
### * service2
apiVersion: v1
kind: Service
metadata:
  name: echo2
  namespace: networking
spec:
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: echo2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo2
spec:
  selector:
    matchLabels:
      app: echo2
  replicas: 1
  template:
    metadata:
      labels:
        app: echo2
    spec:
      containers:
        - name: echo2
          image: hashicorp/http-echo
          args:
            - "-text=echo2"
          ports:
            - containerPort: 5678
---
### * test ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: networking
  #ingressClassName: "traefik"
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    #!
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}" # https://github.com/kubernetes-sigs/external-dns/blob/master/docs/faq.md
    external-dns/is-public: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    #!
spec:
  tls:
    - hosts:
        - echo1.fabricesemti.net
        # - echo2.fabricesemti.net
      secretName: echo-tls
  rules:
    - host: echo1.fabricesemti.net
      http:
        paths:
          - backend:
              serviceName: echo1
              servicePort: 80
    # - host: echo2.fabricesemti.net
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: echo2
    #           servicePort: 80
